--- a/app/components/Sidebar/sidebar.scss
+++ b/app/components/Sidebar/sidebar.scss
@@ -17,7 +17,7 @@
 
 	&.open {
 		left: 0;
-		box-shadow: 5px 0px 5px 0px rgba(0, 0, 0, 0.75);
+		box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.75);
 	}
 }
 
